initialisation de l'environnement

--- a/technical_server/.env
+++ b/technical_server/.env
@@ -1,6 +1,12 @@
 app_name=TechnicalServer
 admin_email=none@entropy.sc
 
+
+technical_user=technical_user
+technical_password=3A42f6be3e6
+
+database_url=postgresql://technical_user:3A42f6be3e6@localhost:5432/technical_db
+
 debug=true
 host="http://localhost"
 port=18080
