--- a/technical_server/pyproject.toml
+++ b/technical_server/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "pandas>=2.3.0",
     "psycopg>=3.2.6",
     "psycopg-pool>=3.2.6",
     "pydantic-settings>=2.8.1",
