--- a/technical_front/package.json
+++ b/technical_front/package.json
@@ -13,9 +13,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@tanstack/react-query": "^5.80.7",
+        "@tanstack/react-query": "^5.81.2",
         "@tanstack/react-router": "^1.121.21",
         "@tanstack/react-table": "^8.21.3",
+        "@tanstack/router": "^0.0.1-beta.53",
         "openapi-fetch": "^0.14.0",
         "openapi-react-query": "^0.5.0",
         "react": "^19.1.0",
